--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/JTSkelton/shapes2#readme",
   "devDependencies": {
-    "webpack": "4.39.3"
+    "webpack": "4.39.3",
+    "webpack-cli": "^4.9.1"
   }
 }
